<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="46dp"
        android:text="@string/txt8"
        android:textColor="#1C36C0"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="379dp"
        android:text="@string/txt9"
        android:textColor="#1C1CA3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="63dp"
        android:layout_height="52dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/btn7"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton10"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@drawable/cup" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/btn10"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toStartOf="@+id/imageButton10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@drawable/sm_bottle" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="150dp"
        android:text="@string/txt10"
        android:textColor="#1C1CA3"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton11"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/imageButton9" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="87dp"
        android:layout_height="78dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/btn9"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toStartOf="@+id/imageButton4"
        app:layout_constraintStart_toEndOf="@+id/imageButton9"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lg_bottle" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="390dp"
        android:text="@string/txt11"
        android:textColor="#1C1CA3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/imageButton10" />

    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="176dp"
        android:layout_height="149dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="91dp"
        android:contentDescription="@string/btn8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:srcCompat="@drawable/glass" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="146dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="33dp"
        android:text="@string/txt12"
        android:textColor="#1C1CA3"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

</androidx.constraintlayout.widget.ConstraintLayout>